# poc-wasm-highlight

./: .gitignore  Cargo.toml  README.md  index.html  index.js  output  package-lock.json  package.json
src/: lib.rs  main.rs
src/assets/1/: output
src/assets/2/: filename  output
