[package]
name = "without-a-bundler"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
syntect = { git = "https://github.com/slimsag/syntect.git", default-features = false, features = [ "default-fancy" ] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
lazy_static = "1.0"
serde = { version = "1.0", features = ["derive"] }
wee_alloc = "0.4.5"
mime-sniffer = "^0.1"
difference = "2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[profile.release]
lto = true
opt-level = 'z'

